Differentiate error between 401 and 403 error messages

--- a/public/401.html
+++ b/public/401.html
@@ -1,8 +1,8 @@
 <div class="ui grid center aligned container">
   <div class="nine wide column">
     <div class="ui error message">
-      <h1>You are not authorized to do this.</h1>
-      <p>You should probably <a href='/'>return back home</a></p>.
+      <h1>You are unauthenticated.</h1>
+      <p>Please sign in and try again.</p>
     </div>
   </div>
 </div>
